--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
         "name": "(gdb) Launch",
         "type": "cppdbg",
         "request": "launch",
-        "program": "enter program name, for example ${workspaceFolder}/a.out",
-        "args": [],
+        "program": "${workspaceFolder}/so_long",
+        "args": ["map1.ber"],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
         "environment": [],
