--- a/so_game/.vscode/settings.json
+++ b/so_game/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"*.jsx": "javascriptreact",
 		"macros.h": "c",
-		"so_long.h": "c"
+		"so_long.h": "c",
+		"libft.h": "c"
 	}
 }
