Some changes on struct

--- a/so_game/Makefile
+++ b/so_game/Makefile
@@ -4,18 +4,19 @@ SRC_PRINTF = aux_print.c ft_printf.c
 SRC_GNL = get_next_line_bonus.c get_next_line_utils_bonus.c
 SRC_DRAW = aux_func.c draw.c images.c map_draw.c sprites.c
 SRC_MAPS = flood_fill.c map_check.c read_map.c
-SRC_LIBFT = ft_putstr_fd.c ft_strlen.c ft_memmove.c ft_putchar_fd.c
+SRC_LIBFT = ft_putstr_fd.c ft_strlen.c ft_putchar_fd.c ft_memset.c \
+			ft_calloc.c
 
 SRC =	$(addprefix ./srcs/lib/, $(SRC_LIBFT)) \
 		$(addprefix ./srcs/custom/get_next_line/, $(SRC_GNL)) \
 		$(addprefix ./srcs/custom/ft_printf/, $(SRC_PRINTF)) \
-		$(addprefix ./srcs/draw/, $(SRC_DRAW)) \
 		$(addprefix ./srcs/maps/, $(SRC_MAPS)) \
+		# $(addprefix ./srcs/draw/, $(SRC_DRAW)) \
 
 
 SRCOBJ = obj/
 CC = gcc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = #-Wall -Wextra -Werror
 LIBFLAGS = -lXext -lX11
 LIB = minilibx-linux/libmlx_Linux.a
 OBJ = $(addprefix $(SRCOBJ), $(SRC:./srcs/%.c=%.o))
