Map_draw (STILL SOME LEAKS)

--- a/so_game/Makefile
+++ b/so_game/Makefile
@@ -2,8 +2,9 @@ NAME = so_long
 
 SRC_PRINTF = aux_print.c ft_printf.c
 SRC_GNL = get_next_line_bonus.c get_next_line_utils_bonus.c
-SRC_DRAW = aux_func.c draw.c images.c map_draw.c sprites.c render.c creation.c
+SRC_DRAW = aux_func.c draw.c images.c map_draw.c sprites.c creation.c
 SRC_MAPS = flood_fill.c map_check.c read_map.c
+SRC_OBJS = player.c colectible.c exit.c
 SRC_LIBFT = ft_putstr_fd.c ft_strlen.c ft_putchar_fd.c ft_memset.c \
 			ft_calloc.c ft_strdup.c
 
@@ -11,7 +12,8 @@ SRC =	$(addprefix ./srcs/lib/, $(SRC_LIBFT)) \
 		$(addprefix ./srcs/custom/get_next_line/, $(SRC_GNL)) \
 		$(addprefix ./srcs/custom/ft_printf/, $(SRC_PRINTF)) \
 		$(addprefix ./srcs/map/, $(SRC_MAPS)) \
-		# $(addprefix ./srcs/draw/, $(SRC_DRAW)) \
+		$(addprefix ./srcs/obj/, $(SRC_OBJS)) \
+		$(addprefix ./srcs/draw/, $(SRC_DRAW))
 
 
 SRCOBJ = obj/
