--- a/so_game/Makefile
+++ b/so_game/Makefile
@@ -2,7 +2,7 @@ NAME = so_long
 
 SRC_PRINTF = aux_print.c ft_printf.c
 SRC_GNL = get_next_line_bonus.c get_next_line_utils_bonus.c
-SRC_DRAW = aux_func.c draw.c images.c map_draw.c sprites.c creation.c
+SRC_DRAW = draw.c images.c map_draw.c sprites.c
 SRC_MAPS = flood_fill.c map_check.c read_map.c
 SRC_OBJS = player.c colectible.c exit.c cleaning.c
 SRC_LIBFT = ft_putstr_fd.c ft_strlen.c ft_putchar_fd.c ft_memset.c \
